force-app/main/default/objects/Contract_Performance_Result__c/Contract_Performance_Result__c.object-meta.xml
<CustomObject>
    <description>Capture Performance Matrix Result</description>
    <label>Contract Performance Result</label>
    <nameField>
        <displayFormat>SLA_COA_R-{0000000000}</displayFormat>
        <label>Contract Performance Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Performance Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>