force-app/main/default/objects/Contract_Performance_Result__c/fields/COA_Result_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>COA_Result_Owner_Email__c</fullName>
    <label>COA Result Owner Email</label>
    <type>Email</type>
</CustomField>