force-app/main/default/objects/Contract_Performance_Result__c/fields/Contract_Performance_SLA_COA__c.field-meta.xml
<CustomField>
    <fullName>Contract_Performance_SLA_COA__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contract Performance SLA/ COA</label>
    <referenceTo>Contract_Performance_SLA_COA__c</referenceTo>
    <relationshipLabel>Contract Performance Results</relationshipLabel>
    <relationshipName>Contract_Performance_Results1</relationshipName>
    <type>Lookup</type>
</CustomField>