force-app/main/default/objects/Contract_Performance_Result__c/fields/ContractPerformanceAgreementID__c.field-meta.xml
<CustomField>
    <fullName>ContractPerformanceAgreementID__c</fullName>
    <formula>CASESAFEID(Contract_Performance_SLA_COA__r.Contract_Performance_Agreement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractPerformanceAgreementID</label>
    <type>Text</type>
</CustomField>