force-app/main/default/objects/Contract_Performance_Result__c/fields/CPA_SLACOA_ID_DueDate__c.field-meta.xml
<CustomField>
    <fullName>CPA_SLACOA_ID_DueDate__c</fullName>
    <description>Uinque id for Customer Performance agrement +  SLA/COA +  DueDate</description>
    <externalId>true</externalId>
    <label>CPA_SLACOA_ID_DueDate</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>