force-app/main/default/objects/Contract_Performance_Result__c/fields/Cycle__c.field-meta.xml
<CustomField>
    <fullName>Cycle__c</fullName>
    <formula>Text( Contract_Performance_SLA_COA__r.Cycle__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cycle</label>
    <type>Text</type>
</CustomField>