force-app/main/default/objects/Contract_Performance_Result__c/fields/isBreachedWorkflowFlag__c.field-meta.xml
<CustomField>
    <fullName>isBreachedWorkflowFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBreachedWorkflowFlag</label>
    <type>Checkbox</type>
</CustomField>