force-app/main/default/objects/Contract_Performance_Result__c/fields/isReminderEmailWorkflowFlag__c.field-meta.xml
<CustomField>
    <fullName>isReminderEmailWorkflowFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReminderEmailWorkflowFlag</label>
    <type>Checkbox</type>
</CustomField>