force-app/main/default/objects/Contract_Performance_Result__c/fields/Penalty_Description__c.field-meta.xml
<CustomField>
    <fullName>Penalty_Description__c</fullName>
    <label>Penalty Description</label>
    <type>TextArea</type>
</CustomField>