force-app/main/default/objects/Contract_Performance_Result__c/fields/Result_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Result_Due_Date__c</fullName>
    <label>Result Due Date</label>
    <type>Date</type>
</CustomField>