force-app/main/default/objects/Contract_Performance_Result__c/fields/Result_Due_Date_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Result_Due_Date_Reminder__c</fullName>
    <label>Result Due Date Reminder</label>
    <type>DateTime</type>
</CustomField>