force-app/main/default/objects/Contract_Performance_Result__c/fields/Result_Has_Breached__c.field-meta.xml
<CustomField>
    <fullName>Result_Has_Breached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Result Has Breached</label>
    <type>Checkbox</type>
</CustomField>