force-app/main/default/objects/Contract_Performance_Result__c/fields/Result_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Result_Last_Modified__c</fullName>
    <label>Result Last Modified</label>
    <type>DateTime</type>
</CustomField>