force-app/main/default/objects/Contract_Performance_Result__c/fields/SLACOA_Name__c.field-meta.xml
<CustomField>
    <fullName>SLACOA_Name__c</fullName>
    <formula>Contract_Performance_SLA_COA__r.Name</formula>
    <label>SLACOA Name</label>
    <type>Text</type>
</CustomField>