force-app/main/default/objects/Contract_Performance_Result__c/validationRules/COA_Result_Owner_Not_for_SLA.validationRule-meta.xml
<ValidationRule>
    <fullName>COA_Result_Owner_Not_for_SLA</fullName>
    <active>true</active>
    <errorConditionFormula>!isBlank( COA_Result_Owner_Email__c ) &amp;&amp;  Type__c != &quot;COA&quot;</errorConditionFormula>
    <errorDisplayField>COA_Result_Owner_Email__c</errorDisplayField>
    <errorMessage>COA Result Owner can only be set for Type &quot;COA&quot;</errorMessage>
</ValidationRule>