force-app/main/default/objects/Contract_Performance_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contract_Performance_Agreement_Name__c</columns>
    <columns>Measurement__c</columns>
    <columns>Result__c</columns>
    <columns>NAME</columns>
    <columns>Contract_Performance_SLA_COA__c</columns>
    <columns>Cycle__c</columns>
    <columns>Result_Due_Date_Reminder__c</columns>
    <columns>Result_Due_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>