force-app/main/default/objects/Contract_Performance_Result__c/listViews/SLA.listView-meta.xml
<ListView>
    <fullName>SLA</fullName>
    <columns>Contract_Performance_Agreement_link__c</columns>
    <columns>Measurement__c</columns>
    <columns>Result__c</columns>
    <columns>NAME</columns>
    <columns>Contract_Performance_SLA_COA__c</columns>
    <columns>Cycle__c</columns>
    <columns>Result_Due_Date_Reminder__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>SLA</value>
    </filters>
    <label>SLA</label>
    <language>en_US</language>
</ListView>